<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:background="#87cefa"
	android:orientation="vertical"
	tools:context=".LoginActivity" >
	
     <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:layout_margin="15dip"
        android:gravity="center"
        android:background="@drawable/background_login_div_bg"
        android:orientation="vertical">

	<TextView
		android:id="@+id/login_page"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dip"
		android:textSize="20sp"
		android:text="@string/login_page" />

    <LinearLayout
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:textSize="15sp"
            android:text="@string/username"/>
        
       <EditText
		    android:id="@+id/username"
			android:layout_width="200dip"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dip"
			android:hint="@string/username" />
    
   </LinearLayout>
   
     <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

         <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="20dip"
            android:text="@string/password"/>           

   		<EditText
			android:id="@+id/password"
			android:layout_width="200dip"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dip"
			android:hint="@string/password"
			android:inputType="textPassword" />
   
   </LinearLayout>
   
     <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="100dip"
        android:layout_marginBottom="20dip"
        android:orientation="horizontal">

		<Button
			android:id="@+id/login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dip"
			android:text="@string/login" >
		</Button>

	<!-- 	<Button
			android:id="@+id/register"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dip"
			android:text="@string/register" >
		</Button>
	 -->
		
		</LinearLayout>
	
	</LinearLayout>
	
     <RelativeLayout  
      	android:layout_width="fill_parent"  
     	android:layout_height="wrap_content">  
      
      <TextView  
          android:id="@+id/register_link"  
   		  android:text="@string/login_register_link"  
    	  android:layout_width="wrap_content"  
          android:layout_height="wrap_content"  
          android:layout_marginLeft="15dp"  
          android:textColor="#888"  
          android:textColorLink="#FF0066CC"  /> 
         
	</RelativeLayout>

</LinearLayout>