<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:background="@drawable/maintab_toolbar_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_algorithm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_algorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_algorithm"
                android:background="@drawable/home_btn_selector" />

            <TextView
                android:id="@+id/text_algorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_algorithm"
                android:textColor="@android:color/white" />
        </LinearLayout>
        
         <LinearLayout
            android:id="@+id/ll_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_result"
                android:background="@drawable/friends_btn_selector" />

            <TextView
                android:id="@+id/text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_result"
                android:textColor="@android:color/white" />
        </LinearLayout>
        
          <LinearLayout
            android:id="@+id/ll_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_setting"
                android:background="@drawable/message_btn_selector" />

            <TextView
                android:id="@+id/text_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting"
                android:textColor="@android:color/white" />
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>